--- a/crewjs/package.json
+++ b/crewjs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crewjs",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.2",
+  "description": "JavaScript sprider library",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
